# Vegapunk

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/samples/: splunk_sample.json
tests/: conftest.py  test_ingestion.py  test_storage.py
vegapunk/: __init__.py  config.py  models.py
vegapunk/agents/: __init__.py  analyst.py  orchestrator.py  triage.py
vegapunk/agents/tools/: mitre.py  sql_search.py  vector_search.py
vegapunk/connectors/: __init__.py  wazuh_cloud.py
vegapunk/ingestion/: __init__.py  chunker.py  normalizer.py  pipeline.py
vegapunk/ingestion/parsers/: __init__.py  base.py  elastic.py  splunk.py  wazuh.py
vegapunk/interfaces/: cli.py  slack_bot.py  streamlit_app.py
vegapunk/prompts/: __init__.py  analysis.py  triage.py
vegapunk/storage/: __init__.py  manager.py  metadata_store.py  vector_store.py
