[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vegapunk"
version = "0.1.0"
description = "AI-powered SIEM analysis agent using Claude"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "streamlit>=1.40.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
slack = ["slack-bolt>=1.18.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.6.0"]

[project.scripts]
vegapunk = "vegapunk.interfaces.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
